logo and translations

--- a/app/assets/stylesheets/smart_city_guides/layout.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/layout.css.sass
@@ -6,7 +6,7 @@
         text-shadow: none 
         color: #FFF
 .brand
-  width: 200px
+  width: 50px
   margin: 0
   line-height: 20px
   color: #fff
@@ -16,6 +16,10 @@
 
 .headerFront
   margin-top: 20px
+  img
+    margin-left: 35%
+    margin-top: 6%
+    width: 236px
 
 .big
   letter-spacing: 0px
