--- a/app/views/home/_info_city.html.erb
+++ b/app/views/home/_info_city.html.erb
@@ -7,7 +7,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Toledo</h1>
-              <p class="lead">World Heritage Site by UNESCO since 1986 for its extensive cultural and monumental heritage as one of the former capitals of the Spanish Empire</p>
+              <p class="lead">World Heritage Site for its extensive cultural and monumental heritage</p>
             </div>
           </div>
         </div>
