--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -13,6 +13,7 @@
 					text-align: left
 					margin-bottom: 3px
 					margin-top: 3px
+					font-size: 16px
 				img
 					width: 175px
 					height: 120px
