--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -2,8 +2,8 @@
 					<div class="thumbnail labels">
 						<%= image_tag('toledo_basica.jpg') %>
 						<div class="caption">
-							<h4>Guía básica</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<h4>Basic guide</h4>
+							<p>A short guide with the principal places... </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
 							</p>
@@ -12,61 +12,14 @@
 				</li>
 				<li class="thumbnails_home">
 					<div class="thumbnail labels">
-						<%= image_tag('ninja.jpeg') %>
+						<%= image_tag('24_guide.jpg') %>
 						<div class="caption">
-							<h4>Toledo medieval</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<h4>Toledo in 24 hours</h4>
+							<p>The essence of Toledo in 24 hours</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
 							</p>
 						</div>
 					</div>
 				</li>
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('toledo_rio2.jpg') %>
-						<div class="caption">
-							<h4>Toledo en un día</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('ninja.jpeg') %>
-						<div class="caption">
-							<h4>Thumbnail</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('ninja.jpeg') %>
-						<div class="caption">
-							<h4>Thumbnail</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('ninja.jpeg') %>
-						<div class="caption">
-							<h4>Thumbnail</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
+				
