--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -2,10 +2,10 @@
 
 
   <nav class="navbar-inner">
-    <%#= link_to(image_tag('header-logo.png', :alt => t('site.name')), root_path, class: 'brand') %>
+    <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'brand') %>
 
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
-    <a href="/home"><h2 class="brand" >HELLOWORLD</h2></a>
+    <a href="/home"><div id="logo"><h2 class="brand">HELLOWORLD</h2></a>
     <ul class="nav pull-right">
       <div class="search-nav pull-left">
       <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
