--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,9 +1,9 @@
 				<li class="thumbnails_home">
 					<div class="thumbnail labels">
-						<%= image_tag('two.jpg') %>
+						<%= image_tag('templars.jpg') %>
 						<div class="caption">
-							<h4>Thumbnail</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<h4>Toledo Templar in the legend</h4>
+							<p>The mystery of the Knights Templar and the signs...</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
 							</p>
@@ -12,25 +12,14 @@
 				</li>
 				<li class="thumbnails_home">
 					<div class="thumbnail labels">
-						<%= image_tag('two.jpg') %>
+						<%= image_tag('magic.jpg') %>
 						<div class="caption">
-							<h4>Thumbnail</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<h4>Magical Journey to Toledo</h4>
+							<p>Toledo, an epicenter of the riddles...</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
 							</p>
 						</div>
 					</div>
 				</li>
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('two.jpg') %>
-						<div class="caption">
-							<h4>Thumbnail</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
+
