--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -28,9 +28,9 @@
 //planning
 .planification
 	border-radius: 4px 4px 4px 4px
-	overflow-y: scroll
+	overflow-y: auto
 	overflow-x: hidden
-	height: 350px
+	max-height: 350px
 	ul.thumbnails
 		margin: 0
 		li
@@ -38,7 +38,7 @@
 			margin-left: 0
 			margin-bottom: 10px
 		.thumbnail
-			width: 300px
+			width: 270px
 			ul
 				margin: 3px
 			img
