--- a/app/assets/stylesheets/smart_city_guides/layout.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/layout.css.sass
@@ -70,16 +70,19 @@
       &:focus
         background-color: #2BC4D2
     li
+      color: $gray
       a 
+        color: $gray
         &:hover,
         &:focus,
         &:active
-          color: white
+          color: $gray
           background-color: #2BC4D2
           background-image: none
     
   .dropdown-toggle
     margin-right: 5px
+
 
 //users
 
