--- a/app/views/guides/edit.html.erb
+++ b/app/views/guides/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit Trip</h2>
+<h2>Edit Guide</h2>
 
 <%= render :partial => 'form' %>
 <%= render :partial => 'shared/form_description', :locals => {:ao => @guide} %>
