--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -25,7 +25,6 @@
   <div class="tab-content">
 
     <div id="info" class="tab-pane active">
-      
       <%= render :partial => "guides/info" %>
     </div>
 
@@ -41,9 +40,9 @@
     </div>
 
     <div id="book" class="tab-pane ">
-
+      <ul class="thumbnails">
         <%= render :partial => "guides/book" %>
-
+      </ul>
     </div>
     
     
