--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,9 +49,11 @@
 		</ul>
 		<!--http://jqueryui.com/draggable/#sortable-->
 	</div>
-	<div class="wall">
-		<%= render :partial => "activities/index", :locals => { :activities => current_subject.wall(:home).page(params[:page]), :owner => current_subject } %>
-	</div>
+  <div class="comments_object">
+    <h2>comments</h2>
+    <%= render :partial => 'comments/new', :locals => { :activity => Trip.first.post_activity } %>
+    <%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
+  </div>
  </article>
 
 
