--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -37,16 +37,19 @@
           </div>
         </div>
       </li>
-      <li class="diaries">
-        <div class="diary_item">
-          <img src="/assets/san_juan.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Diary</h4>
+
+      <li class="diaries" >
+        <a href="/diaries/1">
+          <div class="diary_item">
+            <img src="/assets/san_juan.jpg" alt="Toledo_basica">
+            <div class="caption">
+              <h4>Diary</h4>
+            </div>
+            <div class="caption_img">
+              <img src="/assets/diario24.png" alt="">
+            </div>
           </div>
-          <div class="caption_img">
-            <img src="/assets/diario24.png" alt="">
-          </div>
-        </div>
+        </a>
       </li> 
     </ul>
     <ul class="trips">
