--- a/app/assets/stylesheets/smart_city_guides/timeline.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/timeline.css.sass
@@ -194,7 +194,7 @@
 
     button.btn,
     input.btn[type="submit"]
-      @include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
+      width: 28.404%
       @include buttonBackground($black, $gray, $textColor: #fff, $textShadow: 0 -1px 0 rgba(0,0,0,.25)) 
       padding: 3px 11px 4px 11px
       float: left
