--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -1,8 +1,8 @@
 				<li>
 					<div class="thumbnail">
-						<%= image_tag('/assets/places/3/zoco2.jpg') %>
+						<%= link_to image_tag('/assets/places/3/zoco2.jpg'), Place.first  %>
 						<div class="caption">
-							<a href=""><h4>Plaza Zocodover</h4></a>
+							<a href="/places/1"><h4>Plaza Zocodover</h4></a>
 							<p>The old Tulaytula cattle market and...</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
@@ -12,9 +12,9 @@
 				</li>
 				<li>
 					<div class="thumbnail">
-						<%= image_tag('catedral.jpg') %>
+						<%= link_to image_tag('catedral.jpg'), Place.find(2)  %>
 						<div class="caption">
-							<a href=""><h4>Cathedral of Toledo</h4></a>
+							<a href="/places/2"><h4>Cathedral of Toledo</h4></a>
 							<p>The primatial cathedral and one of the three...</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
@@ -24,9 +24,9 @@
 				</li>
 				<li>
 				<div class="thumbnail">
-					<%= image_tag('alcazar.JPG') %>
+					<%= link_to image_tag('alcazar.JPG'), Place.find(3)  %>
 					<div class="caption">
-						<a href=""><h4>Alcázar of Toledo</h4></a>
+						<a href="/places/3"><h4>Alcázar of Toledo</h4></a>
 						<p>The Alcázar of Toledo is a stone fortification...</p>
 						<p>
 							<a class="btn btn-primary" href="#">Add to mi guide</a>
