Fix vish editor iframe

--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -18,7 +18,7 @@
       <a data-toggle="tab" href="#photo">photo</a>
     </li>
     <li class="">
-      <a data-toggle="tab" href="#book">book</a>
+      <a data-toggle="tab" href="#book" id="bookTab">book</a>
     </li>
   </ul>
 
