--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,4 @@
-
-<section id="registration"> 
-  <article class="left">
-    <div class="welcome">
-
-      <div class="message">
-        WELCOME
-        <span class="to">
-          TO
-        </span>
-      </div>
-    </div>
-  </article>
-
-
+<section id="devise"> 
   <article class="right">
     <div class="div_registration">
       <h3>
