--- a/app/assets/stylesheets/smart_city_guides/devise.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/devise.css.sass
@@ -1,2 +1,10 @@
 #devise
-	@include makeColumn(5, 6)
+	@include makeColumn(12, 0)
+	.objects
+		@include makeColumn(6, 0)
+		margin-left: 0px
+		display: inline-block
+	.form
+		@include makeColumn(6, 0)
+		margin-left: 0px
+		display: inline-block
