--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,9 @@
 <section id="devise"> 
-  <article class="right">
-    <div class="div_registration">
+  <article class="object">
+    
+  </article>
+  <article class="form">
+    
       <h3>
         <%= t('sign_up').capitalize %>
       </h3>
@@ -38,7 +41,7 @@
           <%= render :partial => "devise/shared/links" %>
         </div>
       <% end %>
-    </div>
+    
   </article>
 </section>
 
