--- a/app/assets/stylesheets/smart_city_guides/devise.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/devise.css.sass
@@ -1,10 +1,10 @@
 #devise
 	@include makeColumn(12, 0)
 	.objects
-		@include makeColumn(6, 0)
+		@include makeColumn(6, 6)
 		margin-left: 0px
-		display: inline-block
+		display: block
 	.form
-		@include makeColumn(6, 0)
-		margin-left: 0px
+		@include makeColumn(6, 6)
+		float: left
 		display: inline-block
