--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,31 +16,19 @@
 
 
 <article class="right_home">
-
-	<div class="navbar navbar-inverse">
-		<div class="navbar-inner">
-			<ul>
-
-				<li><h4>Planning</h4></li>
-
-				<li>
-					<div class="dropdown">
-    				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      				<b class="caret"></b>
-						</a>
-  					<ul class="dropdown-menu">
-					    <li>
-      					<a href="/settings" id="btn_menu_settings">Go to my guide</a>
-    					</li>
-    					<li>
-      					<a href="/relation/customs">Clear planning</a>
-    					</li>
-  					</ul>
-					</div>
-				</li>
-
-			</ul>	
-		</div>	
+	<h3><%= link_to t('planning.planning') %></h3>
+	<div class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+			<b class="caret"></b>
+		</a>
+		<ul class="dropdown-menu">
+	    <li>
+				<a href="/settings" id="btn_menu_settings"><%= t('planning.go') %></a>
+			</li>
+			<li>
+				<a href="/relation/customs"><%= t('planning.clear') %></a>
+			</li>
+		</ul>
 	</div>
 
 	<div class="planification">
@@ -50,7 +38,7 @@
 		<!--http://jqueryui.com/draggable/#sortable-->
 	</div>
   <div class="comments_object">
-    <h2>comments</h2>
+    <h3><%= link_to t('comments') %></h3>
     <%= render :partial => 'comments/new', :locals => { :activity => Trip.first.post_activity } %>
     <%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
   </div>
