--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -47,3 +47,6 @@
 @import "city/places/places"
 
 //smart city
+@import "city/smartCity/home"
+@import "city/smartCity/items"
+@import "city/smartCity/layout"
