--- a/app/views/frontpage/_social_networks.html.erb
+++ b/app/views/frontpage/_social_networks.html.erb
@@ -1,3 +1,4 @@
 |
 <%= link_to image_tag('btn/facebook.png'), user_omniauth_authorize_path(:facebook), :class => "menu_icon" %>
 <%= link_to image_tag('btn/linkedin.png'), user_omniauth_authorize_path(:linkedin), :class => "menu_icon" %>
+<%= link_to image_tag('btn/fiware.png'), user_omniauth_authorize_path(:fiware), :class => "menu_icon" %>
