--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,37 +2,38 @@
 //booststrap
 @import "bootstrap"
 @import "bootstrap-responsive"
+
 //social css
-@import "city/bootstrap-rewrite/forms"
-@import "city/bootstrap-rewrite/navbar"
-@import "city/bootstrap-rewrite/nav"
-@import "city/base/alerts"
-@import "city/base/icons/icon"
+//@import "city/bootstrap-rewrite/forms"
+//@import "city/bootstrap-rewrite/navbar"
+//@import "city/bootstrap-rewrite/nav"
+//@import "city/base/alerts"
+//@import "city/base/icons/icon"
 @import "city/base/mixin/mixin"
-@import "city/base/frontpage"
-@import "city/base/fonts"
-@import "city/base/toolbar"
-@import "city/base/content"
-@import "city/base/content_home"
+//@import "city/base/frontpage"
+//@import "city/base/fonts"
+//@import "city/base/toolbar"
+//@import "city/base/content"
+//@import "city/base/content_home"
 @import "city/base/wrapper_activities"
 @import "city/base/timeline"
-@import "city/base/sidebar"
-@import "city/base/notifications"
-@import "city/base/conversation"
-@import "city/base/adjust"
-@import "city/base/index"
-@import "city/base/footer"
-@import "city/base/layout"
+//@import "city/base/sidebar"
+//@import "city/base/notifications"
+//@import "city/base/conversation"
+//@import "city/base/adjust"
+//@import "city/base/index"
+//@import "city/base/footer"
+//@import "city/base/layout"
 @import "city/base/fcbk"
-@import "city/base/profile"
-@import "city/base/groups"
+//@import "city/base/profile"
+//@import "city/base/groups"
 @import "city/base/tags"
-@import "city/base/contacts"
-@import "city/base/registration"
-@import "city/base/privacy"
-@import "city/base/explore"
-@import "city/base/explore-search"
-@import "city/base/buttons"
+//@import "city/base/contacts"
+//@import "city/base/registration"
+//@import "city/base/privacy"
+//@import "city/base/explore"
+//@import "city/base/explore-search"
+//@import "city/base/buttons"
 
 //documents
 @import "city/documents/info"
