--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,39 +2,12 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale.to_s %>">
   <head>
-    <meta charset="utf-8">
-    <title><%= yield(:title).empty? ? t('site.name') : yield(:title)%></title>
-    <meta name="keywords" content="<%= t('profile.tags.default') %><%= yield(:keywords) %>" >
-    <meta name="description" content= "<%= yield(:description).empty? ? t('frontpage.main_title') : yield(:description) %>" >
-    <meta name="generator" content="SocialStream" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application" %>
-
-    <%= yield :headers %>
-
-    <%= favicon_link_tag "icons/favicon.ico" %>
-
-    <% if protect_against_forgery? %>
-      <%= csrf_meta_tag %>
-    <% end %>
-
-    <script type="text/javascript">
-      I18n.defaultLocale = "<%= I18n.default_locale %>";
-      I18n.locale = "<%= I18n.locale %>";
-    </script>
-
-    <script type="text/javascript">
-      $(document).ready(function() {
-        <%= yield :javascript %>
-      })
-    </script>
+    <%= render :partial => "layouts/head" %>
   </head>
+
   <body>
     <div class="wrapper container">
       <%= render :partial => "layouts/header" %>
-
       <div id="flash">
         <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
       </div>
@@ -61,4 +34,5 @@
     <%= render :partial => "layouts/footer" %>
 
   </body>
+  
 </html>
