--- a/app/views/layouts/frontpage.html.erb
+++ b/app/views/layouts/frontpage.html.erb
@@ -1,25 +1,11 @@
 <!-- HTML5 DOCTYPE -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title><%= yield(:title).empty? ? t('site.name') : yield(:title)%></title>
-    <meta name="keywords" content="<%= yield(:keywords).empty? ? t('profile.tags.default') : yield(:keywords) %>" >
-    <meta name="description" content= "<%= yield(:description).empty? ? "Home" : yield(:description) %>" >
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
-    <%= favicon_link_tag "icons/favicon.ico" %>
 
-    <% if protect_against_forgery? %>
-      <%= csrf_meta_tag %>
-    <% end %>
-    <script type="text/javascript" >
-    $(document).ready(function() {
-      <%= yield :javascript%>
-    });
-    </script>
-    <%= yield :headers %>
+  <head>
+<%= render :partial => "layouts/head" %>
   </head>
+
   <body>
     <div class="wrapper container">
       <header id="header">
