--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,15 +2,7 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale.to_s %>">
   <head>
-    <meta charset="utf-8">
-    <title><%= yield(:title).empty? ? t('site.name') : yield(:title)%></title>
-    <meta name="keywords" content="<%= t('profile.tags.default') %><%= yield(:keywords) %>" >
-    <meta name="description" content= "<%= yield(:description).empty? ? t('frontpage.main_title') : yield(:description) %>" >
-    <meta name="generator" content="SocialStream" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
-    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    <%= render :partial => "layouts/head" %>
     <script>
       $(function() {
       $( ".sortable" ).sortable({
@@ -19,61 +11,15 @@
       $( "ul, li" ).disableSelection();
       });
     </script>
-
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application" %>
-
-    <%= yield :headers %>
-
-    <%= favicon_link_tag "icons/favicon.ico" %>
-
-    <% if protect_against_forgery? %>
-      <%= csrf_meta_tag %>
-    <% end %>
-
-    <script type="text/javascript">
-      I18n.defaultLocale = "<%= I18n.default_locale %>";
-      I18n.locale = "<%= I18n.locale %>";
-    </script>
-
-    <script type="text/javascript">
-      $(document).ready(function() {
-        <%= yield :javascript %>
-      })
-    </script>
   </head>
   <body>
-    <div class="wrapper container">
-      <%= render :partial => "layouts/header" %>
-<!--
-      <%# if content_for?(:toolbar) %>
-        <nav id="toolbar">
-          <%#= yield :toolbar %>
-        </nav>
-      <%# end %>
- -->     
-      <div id="flash">
-        <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
-      </div>
-
-      <section id="content" class="<%= content_section_class %>">
-        <%= yield %>
-      </section>
-  <!--
-      <%# if content_for?(:sidebar) %>
-        <aside id="sidebar">
-          <div id="sidebarContent">
-            <%#= yield :sidebar %>
-          </div>
-        </aside>
-
-      <%# end %>
-        -->
-    </div>
-    
+    <%= render :partial => "layouts/header" %>
+    <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
+    <section class="container">
+      <%= yield %>
+    </section>
     <footer class="footer">
       <%= render :partial => "layouts/footer" %>
     </footer>
-
   </body>
 </html>
