--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -8,7 +8,7 @@
 //@import "city/bootstrap-rewrite/navbar"
 //@import "city/bootstrap-rewrite/nav"
 //@import "city/base/alerts"
-//@import "city/base/icons/icon"
+@import "city/base/icons/icon"
 @import "city/base/mixin/mixin"
 //@import "city/base/frontpage"
 //@import "city/base/fonts"
