--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,7 +11,7 @@
 @import "city/base/icons/icon"
 @import "city/base/mixin/mixin"
 //@import "city/base/frontpage"
-//@import "city/base/fonts"
+@import "city/base/fonts"
 //@import "city/base/toolbar"
 //@import "city/base/content"
 //@import "city/base/content_home"
@@ -48,6 +48,7 @@
 @import "city/places/places"
 
 //smart city
+@import "city/smartCity/headers"
 @import "city/smartCity/home"
 @import "city/smartCity/items"
 @import "city/smartCity/layout"
