--- a/app/assets/stylesheets/city/smartCity/layout.css.sass
+++ b/app/assets/stylesheets/city/smartCity/layout.css.sass
@@ -1,2 +1,17 @@
+//home
 .container
+	@include grid-fluid($fluidGridColumnWidth, $fluidGridGutterWidth)
+	.banner
+		display: inline-block
+		width: 100%
+		height: 60px
+	.left_home
+		@include makeColumn(8, 0)
+		margin-left: 0px
+
+	.right_home
+		@include makeColumn(4, 0)
+
+
+
   
