--- a/app/views/home/_info_city.html.erb
+++ b/app/views/home/_info_city.html.erb
@@ -1,6 +1,7 @@
     <!-- Carousel
 ================================================== -->
-    <div id="myCarousel" class="carousel slide">
+<div class="container-fluid">
+    <div id="Carousel-trip" class="Carousel-trip carousel slide">
       <div class="carousel-inner">
         <div class="item active">
           <%= image_tag('panoramica_toledo.jpg') %>
@@ -30,6 +31,8 @@
           </div>
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+      <a class="left carousel-control" href="#Carousel-trip" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#Carousel-trip" data-slide="next">&rsaquo;</a>
     </div><!-- /.carousel -->
+
+</div>
