--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -1,43 +1,32 @@
-<header class="navbar navbar-inverse navbar-fixed-top">
-  <nav class="navbar-inner">
-    <%= link_to(image_tag('header-logo.png', class: "logo", :alt => t('site.name')), root_path) %>
-    <div class="brand"></div>
-
-    <!-- FIXME: search javascript functionality in 'layouts/search' -->
-    <div class="search-nav">
-      <%= form_tag search_path, method: 'get', class: "navbar-search pull-left" do %>
-        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
-      <% end %>
-    </div>
-    <div class="explore-nav">
-      <%= link_to explore_path do %>
-    
-        <%= t('or explore') %>
-      <% end %>
-
-    </div>
-     <ul class="nav pull-right">
-      <li>
-        <%= link_to current_subject do %>
-          <%= image_tag current_subject.logo.url(:small) %>
-          <span class="name"><%= truncate_name(current_subject.name, length: 15) %></span>
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container nav-header">
+      <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'logo') %>
+      <a class="brand">HELLOWORLD</a>
+      
+      <div class="nav-collapse collapse pull-right">
+        <ul class="nav">
+          <li class="user-nav">
+            <%= link_to current_subject do %>
+              <span class="avatar-nav"><%= image_tag current_subject.logo.url(:small) , :class=> "logo-user" %></span>
+              <span class="name"><%= truncate_name(current_subject.name, length: 15) %></span>
+            <% end %>
+          </li>
+          <li> 
+            <%= render partial: 'layouts/header_dropdown' %>
+          </li>
+        </ul>
+      </div>
+      <div class="search-nav pull-right">
+        <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
+          <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
         <% end %>
-      </li>
-      <li>
-        <%= link_to(raw("<i class='icon_navbar-home'></i> "), root_path)%>
-      </li>   
-      <li>
-        <%= link_to(raw("<i class='icon_navbar-followers'></i> "), contacts_path) %>
-      </li>
-      <li>
-        <%= link_to(raw("<i class='icon_navbar-message'></i> "), conversations_path) %> 
-          <!-- <span id="header_inbox_count">
-            <%= link_to(current_subject.unread_messages_count.to_s, conversations_path) %>
-          </span> -->
-      </li>              
-      <li> 
-        <%= render partial: 'layouts/header_dropdown_menu' %>
-      </li>
-    </ul>
-  </nav>
-</header>
+      </div>
+    </div>
+  </div>
+</div>
