--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,6 +17,7 @@
 //@import "city/base/content_home"
 @import "city/base/wrapper_activities"
 @import "city/base/timeline"
+//@import "city/base/wall"
 //@import "city/base/sidebar"
 //@import "city/base/notifications"
 //@import "city/base/conversation"
@@ -52,3 +53,9 @@
 @import "city/smartCity/home"
 @import "city/smartCity/items"
 @import "city/smartCity/layout"
+
+//smart city b-rewrite
+@import "city/smartCity/b-rewrite/_responsive-767px-max"
+@import "city/smartCity/b-rewrite/_responsive-768px-979px"
+@import "city/smartCity/b-rewrite/_responsive-1200px-min"
+
