--- a/app/assets/stylesheets/city/smartCity/home.css.sass
+++ b/app/assets/stylesheets/city/smartCity/home.css.sass
@@ -1,16 +1,12 @@
 .container
 	.left_home
 		.info_city
-			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			margin-left: 0px
 			.Carousel-trip
-				@include grid-fluid($fluidGridColumnWidth, $fluidGridGutterWidth)
-				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				.item
 					img
 						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-						height: 300px
-						
+						max-height: 300px				
 				.carousel-caption
 					padding-top: 0
 					bottom: 0px
@@ -22,54 +18,63 @@
 						opacity: 0.8
 					p
 						font-size: 16px
-
 		.interest_points
-
-			margin-top: 10px
-			@include makeColumn(8, 0)
 			margin-left: 0px
-
+			margin-top: 0px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			.all-item
 				.search_all
+					@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
-					@include makeColumn(3, 0)
-					margin-top: 20px
+					float: left
 
 				.option_search
+					@include grid-fluid-offset(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
-					@include makeColumn(2, 0)
-					margin-top: 20px
-
+					float: left
+					.checkbox
+						input
+							margin-left: -10px
+							margin-right: 5px
+					
 				.view_type
+					@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
-					@include makeColumn(2, 0)
-					margin-top: 20px
-					.btn
+					float: right
+					.btn-group
 						float: right
 				.guide_home
-					@include makeColumn(8, 0)
-					margin-left: 0px
-
-
+					@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					display: inline-block
+					float: left
 
 	.right_home
-		.navbar
-			margin-bottom: 10px 
-			ul
-				padding: 0px
-				margin: 0px
-				float: right
-				li
-					display: inline-block
-					h4
-						color: grey
-						font-size: 17px
-					.dropdown-menu
-						margin-left: -100px
-						margin-top: 5px
-					.caret
-						border-bottom-color: #0088CC
-						border-top-color: #0088CC
+		h2
+			display: inline-block
+			@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			a
+				color: $gray
+				font-family: $sansFontFamily
+			a:hover
+				text-decoration: none
+		.dropdown
+			display: inline-block
+			@include grid-fluid-span(1, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+		.planification
+			display: inline-block
+			@include border-radius(5px)
+			overflow-y: auto
+			overflow-x: hidden
+			max-height: 350px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.comments_object
+			display: inline-block
+
+
+
+
 
 
 
