--- a/app/assets/stylesheets/city/smartCity/items.css.sass
+++ b/app/assets/stylesheets/city/smartCity/items.css.sass
@@ -27,26 +27,23 @@
 
 //planning
 .planification
-	border-radius: 4px 4px 4px 4px
-	overflow-y: auto
-	overflow-x: hidden
-	max-height: 350px
 	ul.thumbnails
 		margin: 0
 		li
 		.thumbnails_home
+			@include grid-fluid-span(11, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			margin-left: 0
 			margin-bottom: 10px
 		.thumbnail
-			width: 270px
 			ul
 				margin: 3px
 			img
-				width: 50px
+				
 			li
 				text-align: left
 				display: inline-block
 				margin-right: 10px
+
 				h4
 					overflow: hidden
 					white-space: nowrap
@@ -59,9 +56,14 @@
 				p
 					font-size: 12px
 			.avatar_plannings
+				@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				float: left
 				margin-bottom: 0px
+				img
+					@include border-radius(5px)
+					height: 40px
 			.li-inline
+				@include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				margin-bottom: 0px
 
 
