--- a/app/assets/stylesheets/city/smartCity/layout.css.sass
+++ b/app/assets/stylesheets/city/smartCity/layout.css.sass
@@ -1,16 +1,19 @@
 //home
 .container
-	@include grid-fluid($fluidGridColumnWidth, $fluidGridGutterWidth)
+	background-color: $red
+
 	.banner
-		display: inline-block
 		width: 100%
 		height: 60px
 	.left_home
-		@include makeColumn(8, 0)
-		margin-left: 0px
+		@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		float: left
+		display: inline-block
 
 	.right_home
-		@include makeColumn(4, 0)
+		@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		float: right
+		display: inline-block
 
 
 
