--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,8 @@
 		<%= render :partial => "home/interest_points" %>
 	</div>
 </article>
-
-
 <article class="right_home">
-	<h3><%= link_to t('planning.planning') %></h3>
+	<h2><%= link_to t('planning.planning') %></h2>
 	<div class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 			<b class="caret"></b>
@@ -23,18 +21,19 @@
 			</li>
 		</ul>
 	</div>
-
 	<div class="planification">
 		<ul class="thumbnails sortable">
 			<%= render :partial => "home/planification" %>
 		</ul>
 		<!--http://jqueryui.com/draggable/#sortable-->
 	</div>
-  <div class="comments_object">
-    <h3><%= link_to t('comments') %></h3>
+	<h2><%= link_to t('comments') %></h2>
+
+  <div id="comments" class="comments">
     <%= render :partial => 'comments/new', :locals => { :activity => Trip.first.post_activity } %>
     <%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
   </div>
- </article>
+  
+</article>
 
 
