--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,6 +3,7 @@
 <html lang="<%= I18n.locale.to_s %>">
   <head>
     <%= render :partial => "layouts/head" %>
+
     <script>
       $(function() {
       $( ".sortable" ).sortable({
@@ -11,16 +12,21 @@
       $( "ul, li" ).disableSelection();
       });
     </script>
+
   </head>
   <body>
+
     <%= render :partial => "layouts/header" %>
-    <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
-    <section class="container ">
-      <div class="banner"></div>
-      <%= yield %>
+    <section class="container">
+      <div class="row-fluid">
+        <div class="banner"></div>
+        <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
+        <%= yield %>
+      </div>
     </section>
     <footer class="footer">
       <%= render :partial => "layouts/footer" %>
     </footer>
+
   </body>
 </html>
