Fix toolbar at home view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <%# sidebar %>
 <%#= location(link_to(t('home')+": "+ truncate_name(sanitize current_subject.name)))%>     
-<% toolbar %>
+<%# toolbar %>
 <%# if current_subject.respond_to?(:recent_groups) %>
  <%#= render partial: "users/groups",
              locals: { user: current_subject } %>
