--- a/app/views/layouts/_headers_mobile.html.erb
+++ b/app/views/layouts/_headers_mobile.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top mobile_navbar">
   <div class="navbar-inner">
     <div class="container nav-header">
       <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
@@ -21,31 +21,31 @@
             <$%= render partial: 'layouts/header_dropdown' %>
           </li> -->
           <li class="active">
-            <a class="" href="/users/show">Profile</a>
+            <a class="" href="">Profile</a>
           </li>
           <li class="active">
-            <a class="" href="/plannings">Plannings</a>
+            <a class="" href="">Plannings</a>
           </li>
           <li class="active">
-            <a class="" href="/plannings">Diaries</a>
+            <a class="" href="">Diaries</a>
           </li>
           <li>
-            <a class="" href="/plannings">Contacts</a>
+            <a class="" href="">Contacts</a>
           </li>
           <li>
-            <a class="" href="/plannings">Messages</a>
+            <a class="" href="">Messages</a>
           </li>
           <li>
-            <a class="" href="/plannings">Create</a>
+            <a class="" href="">Create</a>
           </li>
           <li>
-            <a class="" href="/plannings">Events</a>
+            <a class="" href="">Events</a>
           </li>
           <li>
-            <a class="" href="/plannings">Favourites</a>
+            <a class="" href="">Favourites</a>
           </li>
           <li>
-            <a class="" href="/plannings">cities</a>
+            <a class="" href="">cities</a>
           </li>
           <li class="divider">
           <li>
