--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,7 +12,7 @@
 @import "city/base/mixin/mixin"
 //@import "city/base/frontpage"
 @import "city/base/fonts"
-//@import "city/base/toolbar"
+@import "city/base/toolbar"
 //@import "city/base/content"
 //@import "city/base/content_home"
 @import "city/base/wrapper_activities"
@@ -27,7 +27,7 @@
 //@import "city/base/layout"
 @import "city/base/fcbk"
 //@import "city/base/profile"
-//@import "city/base/groups"
+@import "city/base/groups"
 @import "city/base/tags"
 //@import "city/base/contacts"
 //@import "city/base/registration"
@@ -53,6 +53,10 @@
 @import "city/smartCity/home"
 @import "city/smartCity/items"
 @import "city/smartCity/layout"
+@import "city/smartCity/profile"
+@import "city/smartCity/guides"
+@import "city/smartCity/planification"
+@import "city/smartCity/trips"
 
 //smart city b-rewrite
 @import "city/smartCity/b-rewrite/_responsive-767px-max"
