--- a/app/assets/stylesheets/city/base/_timeline.css.sass
+++ b/app/assets/stylesheets/city/base/_timeline.css.sass
@@ -8,8 +8,9 @@
     clear: both
     .avatar
       @include border-radius (5px)
+      @include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
       img
-        @include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+        
     .media-body
       color: $grayLight
       word-wrap: break-word
@@ -136,7 +137,8 @@
   float: left
   margin-left: -9px
   margin-top: 8px
-
+  padding-left: 10px
+  margin-right: -10px
 
 
 
