--- a/app/assets/stylesheets/city/base/_wrapper_activities.css.sass
+++ b/app/assets/stylesheets/city/base/_wrapper_activities.css.sass
@@ -1,25 +1,40 @@
 #wrapper_activities
   .wall_input
+    
+
     @include border-radius(7px) 
     background-color: $grayLighter
-    padding: 5px 33px 5px 33px
+    padding: 5px 5px 5px 5px
     margin-bottom: 20px
+    form
+      display: inline-block
+      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+      margin: 0px
+    textarea
+      padding: 0px
+      margin: 0px
+
     input
-      @include makeColumnoMargin(6, 0)
-      margin-top: 8px
+      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+      width: 95%
       display: block
       &[type="submit"]
-        @include size (auto, auto)
+        width: 100% !important
         @include buttonBackground($blueDark, $blue, $textColor: #fff, $textShadow: 0 -1px 0 rgba(0,0,0,.25)) 
-        padding: 3px 11px 4px 11px
+
         float: right
+        display: inline-block
       &[type="checkbox"]
         width: 30px
         margin: 3px 0px 0px 0px
+      .btn
+        display: inline-block
+        width: 100% !important
     .new_document
-      display: inline
+      display: none
       padding: 1px 6px 4px 6px
     .btn-group,
+      display: none
     open
       display: inline-block
       .dropdown-menu
@@ -35,5 +50,5 @@
                 background: rgba(0,232,232,0.3)
                 color: $white
 #flash
-  @include makeColumn(10, 0)
+  
 
