--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -81,7 +81,7 @@
       <div class="city"><h4>VENICE</h4></div>
       <li class="plannings">
         <div class="planning_item">
-          <img src="/assets/venicejpg" alt="Toledo_basica">
+          <img src="/assets/venice.jpg" alt="Toledo_basica">
           <div class="caption">
             <h4>Planning</h4>
           </div>
@@ -93,6 +93,31 @@
       <li class="diaries">
         <div class="diary_item">
           <img src="/assets/venice2.jpg" alt="Toledo_basica">
+          <div class="caption">
+            <h4>Diary</h4>
+          </div>
+          <div class="caption_img">
+            <img src="/assets/diario24.png" alt="">
+          </div>
+        </div>
+      </li> 
+    </ul>
+    <ul class="trips">
+      <div class="city"><h4>FI-CONTENT</h4></div>
+      <li class="plannings">
+        <div class="planning_item">
+          <img src="/assets/planning.png" alt="Toledo_basica">
+          <div class="caption">
+            <h4>Planning</h4>
+          </div>
+          <div class="caption_img">
+            <img src="/assets/guia2.png" alt="">
+          </div>
+        </div>
+      </li>
+      <li class="diaries">
+        <div class="diary_item">
+          <img src="/assets/diary.png" alt="Toledo_basica">
           <div class="caption">
             <h4>Diary</h4>
           </div>
