Add ficontent excursion

--- a/app/views/diaries/_book.html.erb
+++ b/app/views/diaries/_book.html.erb
@@ -1,1 +1,5 @@
-<iframe id="presentation_iframe" src="http://vishub.org/excursions/154.full" width="910" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+<% if @diary.id != 2 %>
+  <iframe id="presentation_iframe" src="http://vishub.org/excursions/154.full" width="910" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+<% else %>
+  <iframe id="presentation_iframe" src="http://vishub.org/excursions/160.full" width="910" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+<% end %>
