--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -116,15 +116,17 @@
         </div>
       </li>
       <li class="diaries">
-        <div class="diary_item">
-          <img src="/assets/diary.png" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Diary</h4>
+        <a href="/diaries/2">
+          <div class="diary_item">
+            <img src="/assets/diary.png" alt="Toledo_basica">
+            <div class="caption">
+              <h4>Diary</h4>
+            </div>
+            <div class="caption_img">
+              <img src="/assets/diario24.png" alt="">
+            </div>
           </div>
-          <div class="caption_img">
-            <img src="/assets/diario24.png" alt="">
-          </div>
-        </div>
+        </a>
       </li> 
     </ul>                
   </div>
