--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -20,12 +20,12 @@
     <section class="container">
       <div class="row-fluid">
         <div class="banner"></div>
-        <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
+        <%#= render :partial => "layouts/flash", :locals => {:flash => flash} %>
         <%= yield %>
       </div>
     </section>
     <footer class="footer">
-      <%= render :partial => "layouts/footer" %>
+      <%#= render :partial => "layouts/footer" %>
     </footer>
 
   </body>
