--- a/app/assets/stylesheets/city/base/_timeline.css.sass
+++ b/app/assets/stylesheets/city/base/_timeline.css.sass
@@ -132,15 +132,17 @@
 
 
 #comment_text
-  @include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
+  @include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
   display: inline-block
   float: left
   margin-left: -9px
   margin-top: 8px
   padding-left: 10px
   margin-right: -10px
+  height: 30px
 
 
+    
 
 
 
@@ -164,3 +166,37 @@
         a
           img
             @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+@media (max-width: 767px)
+  #comment_text
+    @include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
+    display: inline-block
+    float: left
+    margin-left: -9px
+    margin-top: 8px
+    padding-left: 10px
+    margin-right: -10px
+    height: 32px
+
+  #comments
+    @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+    .new-coments-box
+      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+      height: 80px
+
+      .new_comment
+        .avatar
+          display: none
+
+          img
+            width: 60px
+            height: 60px
+            @include border-radius(30px)
+            border: 1px solid #CCCCCC
+            border-right: none
+        .btn
+          margin-left: -2px
+          margin-top: 8px
+          float: left
+          border-radius: 0px 4px 4px 0px
+          height: 43px
