--- a/app/views/home/_interest_points.html.erb
+++ b/app/views/home/_interest_points.html.erb
@@ -1,6 +1,6 @@
 <article class="all-item">
 <!--search-->
-	<div class="search_all">
+	<div class="search_all hidden-phone">
 		<form class="form-search ">
 	    <div class="input-append">
 	    	<input type="text" class="search-query">
@@ -9,7 +9,7 @@
 	  </form>
 	</div>
 <!--options search-->
-  <div class="option_search">
+  <div class="option_search hidden-phone">
     <div class="btn-group">
       <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
       	Filter by
@@ -21,7 +21,7 @@
     </div>
   </div>
 <!--view tipe-->
-  <div class="view_type">
+  <div class="view_type hidden-phone">
     <div class="btn-group">
       <button class="btn">list</button>
       <button class="btn">expanded</button>
