--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,8 @@
 	</div>
 </article>
 <article class="right_home">
+
+	<div class="planification hidden-phone">
 	<h2><%= link_to t('planning.planning') %></h2>
 	<div class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -21,7 +23,6 @@
 			</li>
 		</ul>
 	</div>
-	<div class="planification">
 		<ul class="thumbnails sortable">
 			<%= render :partial => "home/planification" %>
 		</ul>
