--- a/app/views/layouts/_headers_mobile.html.erb
+++ b/app/views/layouts/_headers_mobile.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top mobile_navbar">
+<div class="navbar navbar-inverse navbar-fixed-top hidden-desktop">
   <div class="navbar-inner">
     <div class="container nav-header">
       <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
