--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
       </div>
 
       <% if content_for?(:toolbar) %>
-        <nav id="toolbar">
+        <div id="toolbar " class="hidden-phone">
           <%= yield :toolbar %>
-        </nav>
+        </div>
       <% end %>
 
       <section id="content" class="<%= content_section_class %>">
