--- a/app/views/layouts/frontpage.html.erb
+++ b/app/views/layouts/frontpage.html.erb
@@ -14,7 +14,7 @@
       <section>
         <div id="wrapper_body">
           <div id="flash">
-            <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
+            <%#= render :partial => "layouts/flash", :locals => {:flash => flash} %>
           </div>
 
           <%= render :partial => "layouts/description" %>
