--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -57,6 +57,7 @@
 @import "city/smartCity/guides"
 @import "city/smartCity/planification"
 @import "city/smartCity/trips"
+@import "city/smartCity/frontpage"
 
 //smart city b-rewrite
 @import "city/smartCity/b-rewrite/_responsive-767px-max"
